--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -2182,11 +2182,7 @@ msgid "UART write error"
 msgstr ""
 
 #: shared-module/usb_hid/Device.c
-msgid "USB Busy"
-msgstr ""
-
-#: shared-module/usb_hid/Device.c
-msgid "USB Error"
+msgid "USB busy"
 msgstr ""
 
 #: supervisor/shared/safe_mode.c
@@ -2195,6 +2191,10 @@ msgstr ""
 
 #: supervisor/shared/safe_mode.c
 msgid "USB devices specify too many interface names."
+msgstr ""
+
+#: shared-module/usb_hid/Device.c
+msgid "USB error"
 msgstr ""
 
 #: shared-bindings/_bleio/UUID.c
