--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -710,13 +710,7 @@ msgid "CircuitPython core code crashed hard. Whoops!\n"
 msgstr ""
 
 #: supervisor/shared/safe_mode.c
-msgid ""
-"CircuitPython is in safe mode because you pressed the reset button during "
-"boot. Press again to exit safe mode.\n"
-msgstr ""
-
-#: supervisor/shared/safe_mode.c
-msgid "CircuitPython was unable to allocate the heap.\n"
+msgid "CircuitPython was unable to allocate the heap."
 msgstr ""
 
 #: shared-module/bitbangio/SPI.c
@@ -1634,10 +1628,6 @@ msgstr ""
 msgid "Not playing"
 msgstr ""
 
-#: main.c
-msgid "Not running saved code.\n"
-msgstr ""
-
 #: shared-bindings/_bleio/__init__.c
 msgid "Not settable"
 msgstr ""
@@ -1950,7 +1940,7 @@ msgid "Row entry must be digitalio.DigitalInOut"
 msgstr ""
 
 #: main.c
-msgid "Running in safe mode! "
+msgid "Running in safe mode! Not running saved code.\n"
 msgstr ""
 
 #: shared-module/sdcardio/SDCard.c
@@ -2071,13 +2061,13 @@ msgstr ""
 #: supervisor/shared/safe_mode.c
 msgid ""
 "The CircuitPython heap was corrupted because the stack was too small.\n"
-"Please increase the stack size if you know how, or if not:"
+"Increase the stack size if you know how. If not:"
 msgstr ""
 
 #: supervisor/shared/safe_mode.c
 msgid ""
 "The `microcontroller` module was used to boot into safe mode. Press reset to "
-"exit safe mode.\n"
+"exit safe mode."
 msgstr ""
 
 #: shared-bindings/rgbmatrix/RGBMatrix.c
@@ -2088,7 +2078,7 @@ msgstr ""
 msgid ""
 "The microcontroller's power dipped. Make sure your power supply provides\n"
 "enough power for the whole circuit and press reset (after ejecting "
-"CIRCUITPY).\n"
+"CIRCUITPY)."
 msgstr ""
 
 #: shared-module/audiomixer/MixerVoice.c
@@ -2382,7 +2372,12 @@ msgid "Writes not supported on Characteristic"
 msgstr ""
 
 #: supervisor/shared/safe_mode.c
-msgid "You are in safe mode: something unanticipated happened.\n"
+msgid "You are in safe mode because:\n"
+msgstr ""
+
+#: supervisor/shared/safe_mode.c
+msgid ""
+"You pressed the reset button during boot. Press again to exit safe mode."
 msgstr ""
 
 #: supervisor/shared/safe_mode.c
