--- a/locale/sv.po
+++ b/locale/sv.po
@@ -731,8 +731,8 @@ msgstr ""
 "under start. Tryck igen för att lämna säkert läge.\n"
 
 #: supervisor/shared/safe_mode.c
-msgid "CircuitPython was unable to allocate the heap.\n"
-msgstr "CircuitPython kunde inte allokera heap.\n"
+msgid "CircuitPython was unable to allocate the heap."
+msgstr "CircuitPython kunde inte allokera heap."
 
 #: shared-module/bitbangio/SPI.c
 msgid "Clock pin init failed."
