fix ipaddress.IPv4Address from returning invalid values

--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -1694,7 +1694,7 @@ msgid "Only one color can be transparent at a time"
 msgstr ""
 
 #: shared-bindings/ipaddress/__init__.c
-msgid "Only raw int supported for ip"
+msgid "Only raw int or string supported for ip"
 msgstr ""
 
 #: ports/esp32s2/bindings/espidf/__init__.c ports/esp32s2/esp_error.c
