--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -88,6 +88,10 @@ msgid "%q list must be a list"
 msgstr ""
 
 #: shared-bindings/usb_hid/Device.c
+msgid "%q must be 0-255"
+msgstr ""
+
+#: shared-bindings/usb_hid/Device.c
 msgid "%q must be 1-255"
 msgstr ""
 
@@ -104,7 +108,7 @@ msgid "%q must be >= 1"
 msgstr ""
 
 #: shared-bindings/usb_hid/Device.c
-msgid "%q must be None or 1-255"
+msgid "%q must be None or between 1 and len(report_descriptor)-1"
 msgstr ""
 
 #: shared-module/vectorio/Polygon.c
