--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -1187,7 +1187,7 @@ msgstr ""
 
 #: ports/raspberrypi/common-hal/rp2pio/StateMachine.c
 #, c-format
-msgid "Instruction %d jumps on pin"
+msgid "Missing jmp_pin. Instruction %d jumps on pin"
 msgstr ""
 
 #: ports/raspberrypi/common-hal/rp2pio/StateMachine.c
