restrict WaveFile buffer size to 8-1024

--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -103,7 +103,7 @@ msgid "%q indices must be integers, not %s"
 msgstr ""
 
 #: py/argcheck.c
-msgid "%q length must be %q"
+msgid "%q length must be %d-%d"
 msgstr ""
 
 #: shared-bindings/usb_hid/Device.c
