like #5571, but for AP

--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -2143,7 +2143,7 @@ msgid "Stack size must be at least 256"
 msgstr ""
 
 #: ports/espressif/common-hal/wifi/Radio.c
-msgid "Station must be started"
+msgid "Interface must be started"
 msgstr ""
 
 #: ports/raspberrypi/common-hal/audiopwmio/PWMAudioOut.c
