--- a/locale/fr.po
+++ b/locale/fr.po
@@ -684,7 +684,7 @@ msgstr "Les blocs CBC doivent être des multiples de 16 octets"
 
 #: supervisor/shared/safe_mode.c
 msgid "CIRCUITPY drive could not be found or created."
-msgstr "L’appareil CIRCUITPY ne peut pas être trouvé ou créé."
+msgstr "L'appareil CIRCUITPY ne peut pas être trouvé ou créé."
 
 #: ports/espressif/common-hal/espidf/__init__.c ports/espressif/esp_error.c
 msgid "CRC or checksum was invalid"
@@ -842,11 +842,11 @@ msgstr "Fichier .mpy corrompu"
 
 #: ports/espressif/common-hal/neopixel_write/__init__.c
 msgid "Could not retrieve clock"
-msgstr "Impossible d’obtenir l’horloge"
+msgstr "Impossible d'obtenir l'horloge"
 
 #: shared-bindings/_bleio/Adapter.c
 msgid "Could not set address"
-msgstr "Impossible de définir l’adresse"
+msgstr "Impossible de définir l'adresse"
 
 #: shared-bindings/pwmio/PWMOut.c
 msgid "Could not start PWM"
@@ -1006,7 +1006,7 @@ msgstr "Échec d'allocation du tampon %q"
 
 #: ports/espressif/common-hal/wifi/__init__.c
 msgid "Failed to allocate Wifi memory"
-msgstr "Impossible d’allouer la mémoire pour Wifi"
+msgstr "Impossible d'allouer la mémoire pour Wifi"
 
 #: ports/espressif/common-hal/wifi/ScannedNetworks.c
 msgid "Failed to allocate wifi scan memory"
@@ -1833,7 +1833,7 @@ msgstr "Ainsi que tout autres modules présents sur le système de fichiers\n"
 
 #: shared-module/vectorio/Polygon.c
 msgid "Polygon needs at least 3 points"
-msgstr "Polygon a besoin d’au moins 3 points"
+msgstr "Polygon a besoin d'au moins 3 points"
 
 #: shared-bindings/_bleio/Adapter.c
 msgid "Prefix buffer must be on the heap"
@@ -2552,7 +2552,7 @@ msgstr "matrice/octets requis à la droite"
 
 #: extmod/ulab/code/numpy/numerical.c
 msgid "attempt to get (arg)min/(arg)max of empty sequence"
-msgstr "tentative d’obtenir (arg)min/(arg)max d'une séquence vide"
+msgstr "tentative d'obtenir (arg)min/(arg)max d'une séquence vide"
 
 #: extmod/ulab/code/numpy/numerical.c
 msgid "attempt to get argmin/argmax of an empty sequence"
@@ -2620,7 +2620,7 @@ msgstr "tampon est plus petit que la taille demandée"
 
 #: extmod/ulab/code/numpy/create.c extmod/ulab/code/utils/utils.c
 msgid "buffer size must be a multiple of element size"
-msgstr "taille du tampon doit être un multiple de la taille de l’élément"
+msgstr "taille du tampon doit être un multiple de la taille de l'élément"
 
 #: shared-module/struct/__init__.c
 msgid "buffer size must match format"
@@ -3181,7 +3181,7 @@ msgstr "la fonction a reçu plusieurs valeurs pour l'argument '%q'"
 
 #: extmod/ulab/code/scipy/optimize/optimize.c
 msgid "function has the same sign at the ends of interval"
-msgstr "la fonction a le même signe aux extrémités de l’intervalle"
+msgstr "la fonction a le même signe aux extrémités de l'intervalle"
 
 #: extmod/ulab/code/ndarray.c
 msgid "function is defined for ndarrays only"
@@ -4186,11 +4186,11 @@ msgstr "le délai (timeout) doit être < 655.35 secondes"
 
 #: shared-module/sdcardio/SDCard.c
 msgid "timeout waiting for v1 card"
-msgstr "Délai d’expiration dépassé en attendant une carte v1"
+msgstr "Délai d'expiration dépassé en attendant une carte v1"
 
 #: shared-module/sdcardio/SDCard.c
 msgid "timeout waiting for v2 card"
-msgstr "Délai d’expiration dépassé en attendant une carte v2"
+msgstr "Délai d'expiration dépassé en attendant une carte v2"
 
 #: ports/stm/common-hal/pwmio/PWMOut.c
 msgid "timer re-init"
@@ -4390,7 +4390,7 @@ msgstr "width doit être plus que zero"
 #: ports/espressif/common-hal/wifi/Radio.c
 #: ports/raspberrypi/common-hal/wifi/Radio.c
 msgid "wifi is not enabled"
-msgstr "wifi n’est pas activé"
+msgstr "wifi n'est pas activé"
 
 #: ports/raspberrypi/common-hal/wifi/Monitor.c
 msgid "wifi.Monitor not available"
