update nl translation to fit in uint8_t

--- a/locale/nl.po
+++ b/locale/nl.po
@@ -283,7 +283,7 @@ msgstr "'%s' verwacht op zijn meest r%d"
 #: py/emitinlinethumb.c
 #, c-format
 msgid "'%s' expects {r0, r1, ...}"
-msgstr "'%s' verwacht {r0, r1, …}"
+msgstr "'%s' verwacht {r0, r1, ...}"
 
 #: py/emitinlinextensa.c
 #, c-format
