--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -2056,7 +2056,7 @@ msgid "Too many channels in sample."
 msgstr ""
 
 #: shared-module/displayio/__init__.c
-msgid "Too many display busses"
+msgid "Too many display busses; forgot display.release_displays() ?"
 msgstr ""
 
 #: shared-module/displayio/__init__.c
