--- a/locale/circuitpython.pot
+++ b/locale/circuitpython.pot
@@ -628,7 +628,7 @@ msgid "Below minimum frame rate"
 msgstr ""
 
 #: ports/raspberrypi/common-hal/audiobusio/I2SOut.c
-msgid "Bit clock and word select must be sequential pins"
+msgid "Bit clock and word select must be sequential GPIO pins"
 msgstr ""
 
 #: ports/atmel-samd/common-hal/audiobusio/I2SOut.c
@@ -981,14 +981,6 @@ msgstr ""
 msgid "Extended advertisements with scan response not supported."
 msgstr ""
 
-#: extmod/ulab/code/numpy/fft/fft_tools.c
-msgid "FFT is defined for ndarrays only"
-msgstr ""
-
-#: extmod/ulab/code/numpy/fft/fft_tools.c
-msgid "FFT is implemented for linear arrays only"
-msgstr ""
-
 #: ports/espressif/common-hal/ssl/SSLSocket.c
 msgid "Failed SSL handshake"
 msgstr ""
@@ -1100,8 +1092,6 @@ msgstr ""
 msgid "Generic Failure"
 msgstr ""
 
-#: shared-bindings/displayio/Display.c
-#: shared-bindings/displayio/EPaperDisplay.c
 #: shared-bindings/framebufferio/FramebufferDisplay.c
 #: shared-module/displayio/Display.c
 #: shared-module/framebufferio/FramebufferDisplay.c
@@ -2415,24 +2405,12 @@ msgstr ""
 msgid "annotation must be an identifier"
 msgstr ""
 
-#: extmod/ulab/code/numpy/create.c
-msgid "arange: cannot compute length"
-msgstr ""
-
 #: py/modbuiltins.c
 msgid "arg is an empty sequence"
 msgstr ""
 
 #: py/objobject.c
 msgid "arg must be user-type"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "argsort argument must be an ndarray"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "argsort is not implemented for flattened arrays"
 msgstr ""
 
 #: py/runtime.c shared-bindings/supervisor/__init__.c
@@ -2452,22 +2430,6 @@ msgstr ""
 msgid "argument should be a '%q' not a '%q'"
 msgstr ""
 
-#: extmod/ulab/code/numpy/numerical.c extmod/ulab/code/numpy/transform.c
-msgid "arguments must be ndarrays"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "array and index length must be equal"
-msgstr ""
-
-#: extmod/ulab/code/numpy/io/io.c
-msgid "array has too many dimensions"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "array is too big"
-msgstr ""
-
 #: py/objarray.c shared-bindings/alarm/SleepMemory.c
 #: shared-bindings/memorymap/AddressRange.c shared-bindings/nvm/ByteArray.c
 msgid "array/bytes required on right side"
@@ -2477,28 +2439,8 @@ msgstr ""
 msgid "asm overflow"
 msgstr ""
 
-#: extmod/ulab/code/numpy/numerical.c
-msgid "attempt to get (arg)min/(arg)max of empty sequence"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "attempt to get argmin/argmax of an empty sequence"
-msgstr ""
-
 #: py/objstr.c
 msgid "attributes not supported yet"
-msgstr ""
-
-#: extmod/ulab/code/ulab_tools.c
-msgid "axis is out of bounds"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c extmod/ulab/code/ulab_tools.c
-msgid "axis must be None, or an integer"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "axis too long"
 msgstr ""
 
 #: shared-bindings/bitmaptools/__init__.c
@@ -2539,14 +2481,6 @@ msgstr ""
 
 #: py/emitinlinethumb.c
 msgid "branch not in range"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c extmod/ulab/code/utils/utils.c
-msgid "buffer is smaller than requested size"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c extmod/ulab/code/utils/utils.c
-msgid "buffer size must be a multiple of element size"
 msgstr ""
 
 #: shared-module/struct/__init__.c
@@ -2598,10 +2532,6 @@ msgstr ""
 msgid "can only have up to 4 parameters to Xtensa assembly"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c
-msgid "can only specify one unknown dimension"
-msgstr ""
-
 #: py/objtype.c
 msgid "can't add special method to already-subclassed class"
 msgstr ""
@@ -2630,10 +2560,6 @@ msgstr ""
 
 #: py/objstr.c
 msgid "can't convert '%q' object to %q implicitly"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "can't convert complex to float"
 msgstr ""
 
 #: py/obj.c
@@ -2726,22 +2652,6 @@ msgstr ""
 msgid "can't wait"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c
-msgid "cannot assign new shape"
-msgstr ""
-
-#: extmod/ulab/code/ndarray_operators.c
-msgid "cannot cast output with casting rule"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "cannot convert complex to dtype"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "cannot convert complex type"
-msgstr ""
-
 #: py/objtype.c
 msgid "cannot create '%q' instances"
 msgstr ""
@@ -2750,16 +2660,8 @@ msgstr ""
 msgid "cannot create instance"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c
-msgid "cannot delete array elements"
-msgstr ""
-
 #: py/runtime.c
 msgid "cannot import name %q"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "cannot reshape array"
 msgstr ""
 
 #: extmod/moductypes.c
@@ -2826,49 +2728,13 @@ msgstr ""
 msgid "conversion to object"
 msgstr ""
 
-#: extmod/ulab/code/numpy/filter.c
-msgid "convolve arguments must be linear arrays"
-msgstr ""
-
-#: extmod/ulab/code/numpy/filter.c
-msgid "convolve arguments must be ndarrays"
-msgstr ""
-
-#: extmod/ulab/code/numpy/filter.c
-msgid "convolve arguments must not be empty"
-msgstr ""
-
-#: extmod/ulab/code/numpy/io/io.c
-msgid "corrupted file"
-msgstr ""
-
-#: extmod/ulab/code/numpy/poly.c
-msgid "could not invert Vandermonde matrix"
-msgstr ""
-
 #: shared-module/sdcardio/SDCard.c
 msgid "couldn't determine SD card version"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "cross is defined for 1D arrays of length 3"
-msgstr ""
-
-#: extmod/ulab/code/scipy/optimize/optimize.c
-msgid "data must be iterable"
-msgstr ""
-
-#: extmod/ulab/code/scipy/optimize/optimize.c
-msgid "data must be of equal length"
 msgstr ""
 
 #: ports/atmel-samd/common-hal/imagecapture/ParallelImageCapture.c
 #, c-format
 msgid "data pin #%d in use"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "data type not understood"
 msgstr ""
 
 #: py/parsenum.c
@@ -2896,40 +2762,16 @@ msgstr ""
 msgid "dict update sequence has wrong length"
 msgstr ""
 
-#: extmod/ulab/code/numpy/numerical.c
-msgid "diff argument must be an ndarray"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "differentiation order out of range"
-msgstr ""
-
-#: extmod/ulab/code/numpy/transform.c
-msgid "dimensions do not match"
-msgstr ""
-
 #: py/emitnative.c
 msgid "div/mod not implemented for uint"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "divide by zero"
 msgstr ""
 
 #: py/runtime.c
 msgid "division by zero"
 msgstr ""
 
-#: extmod/ulab/code/numpy/vector.c
-msgid "dtype must be float, or complex"
-msgstr ""
-
 #: py/objdeque.c
 msgid "empty"
-msgstr ""
-
-#: extmod/ulab/code/numpy/io/io.c
-msgid "empty file"
 msgstr ""
 
 #: extmod/moduasyncio.c extmod/moduheapq.c
@@ -3017,36 +2859,8 @@ msgstr ""
 msgid "filesystem must provide mount method"
 msgstr ""
 
-#: extmod/ulab/code/numpy/vector.c
-msgid "first argument must be a callable"
-msgstr ""
-
-#: extmod/ulab/code/scipy/optimize/optimize.c
-msgid "first argument must be a function"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "first argument must be a tuple of ndarrays"
-msgstr ""
-
-#: extmod/ulab/code/numpy/transform.c extmod/ulab/code/numpy/vector.c
-msgid "first argument must be an ndarray"
-msgstr ""
-
 #: py/objtype.c
 msgid "first argument to super() must be type"
-msgstr ""
-
-#: extmod/ulab/code/scipy/linalg/linalg.c
-msgid "first two arguments must be ndarrays"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "flattening order must be either 'C', or 'F'"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "flip argument must be an ndarray"
 msgstr ""
 
 #: py/objint.c
@@ -3080,18 +2894,6 @@ msgstr ""
 
 #: py/bc.c py/objnamedtuple.c
 msgid "function got multiple values for argument '%q'"
-msgstr ""
-
-#: extmod/ulab/code/scipy/optimize/optimize.c
-msgid "function has the same sign at the ends of interval"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "function is defined for ndarrays only"
-msgstr ""
-
-#: extmod/ulab/code/numpy/carray/carray.c
-msgid "function is implemented for ndarrays only"
 msgstr ""
 
 #: py/argcheck.c
@@ -3177,15 +2979,10 @@ msgstr ""
 msgid "incorrect padding"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c extmod/ulab/code/numpy/transform.c
-msgid "index is out of bounds"
-msgstr ""
-
 #: shared-bindings/_pixelmap/PixelMap.c
 msgid "index must be tuple or int"
 msgstr ""
 
-#: extmod/ulab/code/numpy/numerical.c extmod/ulab/code/ulab_tools.c
 #: ports/espressif/common-hal/pulseio/PulseIn.c
 #: shared-bindings/bitmaptools/__init__.c
 msgid "index out of range"
@@ -3195,16 +2992,8 @@ msgstr ""
 msgid "indices must be integers"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c
-msgid "indices must be integers, slices, or Boolean lists"
-msgstr ""
-
 #: ports/espressif/common-hal/busio/I2C.c
 msgid "init I2C"
-msgstr ""
-
-#: extmod/ulab/code/scipy/optimize/optimize.c
-msgid "initial values must be iterable"
 msgstr ""
 
 #: shared-bindings/_bleio/Characteristic.c shared-bindings/_bleio/Descriptor.c
@@ -3213,87 +3002,6 @@ msgstr ""
 
 #: py/compile.c
 msgid "inline assembler must be a function"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "input and output dimensions differ"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "input and output shapes differ"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "input argument must be an integer, a tuple, or a list"
-msgstr ""
-
-#: extmod/ulab/code/numpy/fft/fft_tools.c
-msgid "input array length must be power of 2"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "input arrays are not compatible"
-msgstr ""
-
-#: extmod/ulab/code/numpy/poly.c
-msgid "input data must be an iterable"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "input dtype must be float or complex"
-msgstr ""
-
-#: extmod/ulab/code/numpy/poly.c
-msgid "input is not iterable"
-msgstr ""
-
-#: extmod/ulab/code/numpy/linalg/linalg.c
-msgid "input matrix is asymmetric"
-msgstr ""
-
-#: extmod/ulab/code/numpy/linalg/linalg.c
-#: extmod/ulab/code/scipy/linalg/linalg.c
-msgid "input matrix is singular"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "input must be 1- or 2-d"
-msgstr ""
-
-#: extmod/ulab/code/numpy/carray/carray.c
-msgid "input must be a 1D ndarray"
-msgstr ""
-
-#: extmod/ulab/code/scipy/linalg/linalg.c extmod/ulab/code/user/user.c
-msgid "input must be a dense ndarray"
-msgstr ""
-
-#: extmod/ulab/code/user/user.c
-msgid "input must be an ndarray"
-msgstr ""
-
-#: extmod/ulab/code/numpy/carray/carray.c
-msgid "input must be an ndarray, or a scalar"
-msgstr ""
-
-#: extmod/ulab/code/scipy/signal/signal.c
-msgid "input must be one-dimensional"
-msgstr ""
-
-#: extmod/ulab/code/ulab_tools.c
-msgid "input must be square matrix"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "input must be tuple, list, range, or ndarray"
-msgstr ""
-
-#: extmod/ulab/code/numpy/poly.c
-msgid "input vectors must be of equal length"
-msgstr ""
-
-#: extmod/ulab/code/numpy/approx.c
-msgid "interp is defined for 1D iterables of equal length"
 msgstr ""
 
 #: shared-bindings/_bleio/Adapter.c
@@ -3377,10 +3085,6 @@ msgstr ""
 msgid "issubclass() arg 2 must be a class or a tuple of classes"
 msgstr ""
 
-#: extmod/ulab/code/numpy/linalg/linalg.c
-msgid "iterations did not converge"
-msgstr ""
-
 #: py/objstr.c
 msgid "join expects a list of str/bytes objects consistent with self object"
 msgstr ""
@@ -3447,10 +3151,6 @@ msgstr ""
 msgid "math domain error"
 msgstr ""
 
-#: extmod/ulab/code/numpy/linalg/linalg.c
-msgid "matrix is not positive definite"
-msgstr ""
-
 #: ports/espressif/common-hal/_bleio/Descriptor.c
 #: ports/nrf/common-hal/_bleio/Characteristic.c
 #: ports/nrf/common-hal/_bleio/Descriptor.c
@@ -3458,24 +3158,8 @@ msgstr ""
 msgid "max_length must be 0-%d when fixed_length is %s"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c
-msgid "maximum number of dimensions is "
-msgstr ""
-
 #: py/runtime.c
 msgid "maximum recursion depth exceeded"
-msgstr ""
-
-#: extmod/ulab/code/scipy/optimize/optimize.c
-msgid "maxiter must be > 0"
-msgstr ""
-
-#: extmod/ulab/code/scipy/optimize/optimize.c
-msgid "maxiter should be > 0"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "median argument must be an ndarray"
 msgstr ""
 
 #: py/runtime.c
@@ -3491,20 +3175,12 @@ msgstr ""
 msgid "memoryview: length is not a multiple of itemsize"
 msgstr ""
 
-#: extmod/ulab/code/numpy/linalg/linalg.c
-msgid "mode must be complete, or reduced"
-msgstr ""
-
 #: py/builtinimport.c
 msgid "module not found"
 msgstr ""
 
 #: ports/espressif/common-hal/wifi/Monitor.c
 msgid "monitor init failed"
-msgstr ""
-
-#: extmod/ulab/code/numpy/poly.c
-msgid "more degrees of freedom than data points"
 msgstr ""
 
 #: py/compile.c
@@ -3541,10 +3217,6 @@ msgstr ""
 
 #: py/emitnative.c
 msgid "native yield"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "ndarray length overflows"
 msgstr ""
 
 #: py/runtime.c
@@ -3637,18 +3309,6 @@ msgstr ""
 msgid "not enough arguments for format string"
 msgstr ""
 
-#: extmod/ulab/code/numpy/carray/carray_tools.c
-msgid "not implemented for complex dtype"
-msgstr ""
-
-#: extmod/ulab/code/numpy/bitwise.c
-msgid "not supported for input types"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "number of points must be at least 2"
-msgstr ""
-
 #: py/builtinhelp.c
 msgid "object "
 msgstr ""
@@ -3707,16 +3367,8 @@ msgstr ""
 msgid "off"
 msgstr ""
 
-#: extmod/ulab/code/utils/utils.c
-msgid "offset is too large"
-msgstr ""
-
 #: shared-bindings/dualbank/__init__.c
 msgid "offset must be >= 0"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "offset must be non-negative and no greater than buffer length"
 msgstr ""
 
 #: py/objstr.c py/objstrunicode.c
@@ -3730,10 +3382,6 @@ msgstr ""
 
 #: ports/stm/common-hal/audiobusio/PDMIn.c
 msgid "only mono is supported"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "only ndarrays can be concatenated"
 msgstr ""
 
 #: ports/stm/common-hal/audiobusio/PDMIn.c
@@ -3755,31 +3403,6 @@ msgstr ""
 msgid "opcode"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c extmod/ulab/code/numpy/bitwise.c
-#: extmod/ulab/code/numpy/compare.c extmod/ulab/code/numpy/vector.c
-msgid "operands could not be broadcast together"
-msgstr ""
-
-#: extmod/ulab/code/numpy/linalg/linalg.c
-msgid "operation is defined for 2D arrays only"
-msgstr ""
-
-#: extmod/ulab/code/numpy/linalg/linalg.c
-msgid "operation is defined for ndarrays only"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "operation is implemented for 1D Boolean arrays only"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "operation is not implemented on ndarrays"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "operation is not supported for given type"
-msgstr ""
-
 #: py/modbuiltins.c
 msgid "ord expects a character"
 msgstr ""
@@ -3787,30 +3410,6 @@ msgstr ""
 #: py/modbuiltins.c
 #, c-format
 msgid "ord() expected a character, but string of length %d found"
-msgstr ""
-
-#: extmod/ulab/code/utils/utils.c
-msgid "out array is too small"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "out keyword is not supported for complex dtype"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "out keyword is not supported for function"
-msgstr ""
-
-#: extmod/ulab/code/utils/utils.c
-msgid "out must be a float dense array"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "out must be an ndarray"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "out must be of float dtype"
 msgstr ""
 
 #: shared-bindings/bitmaptools/__init__.c
@@ -3887,10 +3486,6 @@ msgstr ""
 msgid "raw f-strings are not supported"
 msgstr ""
 
-#: extmod/ulab/code/numpy/fft/fft_tools.c
-msgid "real and imaginary parts must be of equal length"
-msgstr ""
-
 #: py/builtinimport.c
 msgid "relative import"
 msgstr ""
@@ -3898,10 +3493,6 @@ msgstr ""
 #: py/obj.c
 #, c-format
 msgid "requested length %d but object has length %d"
-msgstr ""
-
-#: extmod/ulab/code/ndarray_operators.c
-msgid "results cannot be cast to specified type"
 msgstr ""
 
 #: py/compile.c
@@ -3920,10 +3511,6 @@ msgstr ""
 #: shared-bindings/rgbmatrix/RGBMatrix.c
 #, c-format
 msgid "rgb_pins[%d] is not on the same port as clock"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "roll argument must be an ndarray"
 msgstr ""
 
 #: py/objstr.c
@@ -3947,10 +3534,6 @@ msgstr ""
 msgid "set unsupported"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c
-msgid "shape must be integer or tuple of integers"
-msgstr ""
-
 #: shared-module/msgpack/__init__.c
 msgid "short read"
 msgstr ""
@@ -3963,16 +3546,8 @@ msgstr ""
 msgid "sign not allowed with integer format specifier 'c'"
 msgstr ""
 
-#: extmod/ulab/code/ulab_tools.c
-msgid "size is defined for ndarrays only"
-msgstr ""
-
 #: shared-bindings/time/__init__.c
 msgid "sleep length must be non-negative"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "slice step can't be zero"
 msgstr ""
 
 #: py/nativeglue.c
@@ -3985,22 +3560,6 @@ msgstr ""
 
 #: main.c
 msgid "soft reboot\n"
-msgstr ""
-
-#: extmod/ulab/code/numpy/numerical.c
-msgid "sort argument must be an ndarray"
-msgstr ""
-
-#: extmod/ulab/code/scipy/signal/signal.c
-msgid "sos array must be of shape (n_section, 6)"
-msgstr ""
-
-#: extmod/ulab/code/scipy/signal/signal.c
-msgid "sos[:, 3] should be all ones"
-msgstr ""
-
-#: extmod/ulab/code/scipy/signal/signal.c
-msgid "sosfilt requires iterable arguments"
 msgstr ""
 
 #: shared-bindings/bitmaptools/__init__.c
@@ -4087,20 +3646,8 @@ msgstr ""
 msgid "timestamp out of range for platform time_t"
 msgstr ""
 
-#: extmod/ulab/code/ndarray.c
-msgid "tobytes can be invoked for dense arrays only"
-msgstr ""
-
 #: py/compile.c
 msgid "too many args"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c extmod/ulab/code/numpy/create.c
-msgid "too many dimensions"
-msgstr ""
-
-#: extmod/ulab/code/ndarray.c
-msgid "too many indices"
 msgstr ""
 
 #: py/asmthumb.c
@@ -4110,14 +3657,6 @@ msgstr ""
 #: py/runtime.c
 #, c-format
 msgid "too many values to unpack (expected %d)"
-msgstr ""
-
-#: extmod/ulab/code/numpy/approx.c
-msgid "trapz is defined for 1D arrays of equal length"
-msgstr ""
-
-#: extmod/ulab/code/numpy/approx.c
-msgid "trapz is defined for 1D iterables"
 msgstr ""
 
 #: py/obj.c
@@ -4248,14 +3787,6 @@ msgstr ""
 msgid "unsupported types for %q: '%q', '%q'"
 msgstr ""
 
-#: extmod/ulab/code/numpy/io/io.c
-msgid "usecols is too high"
-msgstr ""
-
-#: extmod/ulab/code/numpy/io/io.c
-msgid "usecols keyword must be specified"
-msgstr ""
-
 #: py/objint.c
 #, c-format
 msgid "value must fit in %d byte(s)"
@@ -4282,56 +3813,10 @@ msgstr ""
 msgid "window must be <= interval"
 msgstr ""
 
-#: extmod/ulab/code/numpy/numerical.c
-msgid "wrong axis index"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c
-msgid "wrong axis specified"
-msgstr ""
-
-#: extmod/ulab/code/numpy/io/io.c
-msgid "wrong dtype"
-msgstr ""
-
-#: extmod/ulab/code/numpy/transform.c
-msgid "wrong index type"
-msgstr ""
-
-#: extmod/ulab/code/numpy/compare.c extmod/ulab/code/numpy/create.c
-#: extmod/ulab/code/numpy/io/io.c extmod/ulab/code/numpy/transform.c
-#: extmod/ulab/code/numpy/vector.c
-msgid "wrong input type"
-msgstr ""
-
-#: extmod/ulab/code/numpy/transform.c
-msgid "wrong length of condition array"
-msgstr ""
-
-#: extmod/ulab/code/numpy/transform.c
-msgid "wrong length of index array"
-msgstr ""
-
-#: extmod/ulab/code/numpy/create.c py/objarray.c py/objstr.c
+#: py/objarray.c py/objstr.c
 msgid "wrong number of arguments"
 msgstr ""
 
 #: py/runtime.c
 msgid "wrong number of values to unpack"
-msgstr ""
-
-#: extmod/ulab/code/numpy/vector.c
-msgid "wrong output type"
-msgstr ""
-
-#: extmod/ulab/code/scipy/signal/signal.c
-msgid "zi must be an ndarray"
-msgstr ""
-
-#: extmod/ulab/code/scipy/signal/signal.c
-msgid "zi must be of float type"
-msgstr ""
-
-#: extmod/ulab/code/scipy/signal/signal.c
-msgid "zi must be of shape (n_section, 2)"
 msgstr ""
